package _3_行为型模式._3_访问者模式_Visitor._2_歌手评分;

public abstract class Person {
    public abstract void accept(Action action);
}
